...
    android:layout_height="wrap_content"
    android:layout_marginHorizontal="@dimen/margin_space_x3"
    android:layout_marginVertical="@dimen/margin_space"
    android:background="@drawable/bg_pass_item">

    <Button
        android:id="@+id/activity_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/margin_space_x2"
        android:layout_marginVertical="@dimen/margin_space"
        app:layout_constraintBottom_toBottomOf="@id/money_tv"
        app:layout_constraintEnd_toEndOf="parent"
...
